recursion.lessons.recursion.koch.Koch.scala.error
Koch:2: error: Missing closing brace `}' assumed here
def snowFlake(levels, length){
^Koch:13: error: expected class or object definition
def snowSide (levels:Int, length:Double) {
^